k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-static
  namespace: static
spec:
  selector: 
    matchLabels:
      app: static
  replicas: 1
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - name: static
        image: 693675909033.dkr.ecr.us-east-2.amazonaws.com/k8s-static:1
        ports:
        - containerPort: 80
