k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ing
  namespace: static
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "dev-static.lakkireddy.in"
    http:
      paths:
      - path:
        backend:
          serviceName: k8s-static-svc
          servicePort: 80
